--- a/ico/manifest.json
+++ b/ico/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "興大二手拍賣App",
- "short_name": "興大二手拍賣",
+ "name": "校園二手拍賣App",
+ "short_name": "校園二手拍賣",
  "icons": [
   {
    "src": "android-icon-36x36.png",
